[gd_scene load_steps=3 format=3 uid="uid://bod78px46ggj5"]

[ext_resource type="PackedScene" uid="uid://73vkj3ho7ou5" path="res://scenes/GUI/tooltips/gui_tooltip.tscn" id="1_0idom"]
[ext_resource type="Script" uid="uid://b31i6k5hj6d5v" path="res://scenes/GUI/tooltips/gui_booster_pack_tooltip.gd" id="2_0idom"]

[node name="GUIBoosterPackTooltip" instance=ExtResource("1_0idom")]
script = ExtResource("2_0idom")

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="TitleLabel" type="RichTextLabel" parent="ContentContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_type_variation = &"RichTextLabelHeader"
bbcode_enabled = true
text = "BossterPack: Legendary"
fit_content = true
scroll_active = false

[node name="TotalNumberOfCardsLabel" type="RichTextLabel" parent="ContentContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
text = "BossterPack: Legendary"
fit_content = true
scroll_active = false

[node name="CommonCardChanceLabel" type="RichTextLabel" parent="ContentContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
text = "BossterPack: Legendary"
fit_content = true
scroll_active = false

[node name="RareCardChanceLabel" type="RichTextLabel" parent="ContentContainer/VBoxContainer" index="3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
text = "BossterPack: Legendary"
fit_content = true
scroll_active = false

[node name="LegendaryCardChanceLabel" type="RichTextLabel" parent="ContentContainer/VBoxContainer" index="4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
text = "BossterPack: Legendary"
fit_content = true
scroll_active = false
